# huntsman

./: .gitignore  .gitmodules  Cargo.toml  README.md
binary/: Cargo.toml
binary/src/: main.rs
huntsman/: Cargo.toml
huntsman/cfg/: macro_hello.yaml  mapping_example.yaml  mapping_macro_hello.yaml
huntsman/src/: colors.rs  commands.rs  configuration.rs  hid_hal.rs  hut_util.rs  keymap_util.rs  lib.rs  main.rs  profile_util.rs
huntsman/src/commands/: macros.rs  mappings.rs  profiles.rs  wire.rs
huntsman_comm/: Cargo.toml
huntsman_comm/dev/: analyse.rs
huntsman_comm/src/: helpers.rs  lib.rs  macro.rs  macros.rs  mappings.rs  wire.rs
huntsman_dissector/: Cargo.toml
huntsman_dissector/dev/: analyse.rs
huntsman_dissector/src/: lib.rs  util.rs
library_macro/: Cargo.toml
library_macro/src/: lib.rs
misc/udev/: 49-huntsman_elite.rules
struct_helper/: Cargo.toml  README.md
struct_helper/examples/: showcase.rs
struct_helper/src/: lib.rs
struct_helper/tests/: packed_test_E0133.rs  simple.rs
struct_helper_derive/: Cargo.toml
struct_helper_derive/src/: lib.rs
torch/: Cargo.toml
torch/cfg/: test_larson_scanner.yaml  test_moving_pixels.json  test_moving_pixels.yaml  test_particle_generator.yaml
torch/src/: base.rs  effects.rs  lib.rs  loader.rs  main.rs
usb_hut/: Cargo.toml  hut1_22_pdf_keyboard_page_0x07.txt
usb_hut/dev/: generate.rs
usb_hut/src/: defs.rs  generated.rs  keyboard_page.rs  lib.rs
