[package]
name = "huntsman"
version = "0.1.0"
authors = ["Ivor Wanders <ivor@iwanders.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
hidapi = "1.2.6"
clap = "2.33.3"
huntsman_comm = { path = "../huntsman_comm" }
usb_hut = { path = "../usb_hut" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.17"
