[package]
name = "huntsman_comm"
version = "0.1.0"
authors = ["Ivor Wanders <ivor@iwanders.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
name = "huntsman_comm"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
struct_helper = { path = "../struct_helper" }

serde_json = { version = "^1.0", optional = true }


[features]
build-devtool = ["serde_json"]

[[bin]]
name = "dev_analyse"
path = "dev/analyse.rs"
required-features = ["build-devtool"]
