[package]
name = "huntsman_comm"
version = "0.1.0"
authors = ["Ivor Wanders <ivor@iwanders.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
name = "huntsman_comm"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
struct_helper = { path = "../struct_helper" }
clap = { version = "2.33.3", optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.17"



[features]
build-devtool = ["clap"]

[[bin]]
name = "dev_analyse"
path = "dev/analyse.rs"
required-features = ["build-devtool"]
