[package]
name = "huntsman_dissector"
version = "0.1.0"
authors = ["Ivor Wanders <ivor@iwanders.net>"]
edition = "2018"
license = "GPL-2.0-or-later" # Links against wireshark through the wireshark dissector, so must be GPL.

[dependencies]
wireshark_dissector_rs = { path = "../wireshark_dissector_rs" }
huntsman = { path = "../huntsman" }
struct_helper = { path = "../struct_helper" }
libc = "0.2.93"

serde_json = { version = "1.0", optional = true }
clap = { version = "2.33.3", optional = true }

[lib]
name = "huntsman_dissector"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
build-devtool = ["clap"]

[[bin]]
name = "dev_analyse"
path = "dev/analyse.rs"
required-features = ["build-devtool"]
