[package]
name = "torch"
version = "0.1.0"
authors = ["Ivor Wanders <ivor@iwanders.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"



[dependencies]
huntsman = { path = "../huntsman" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.17"

rand = "0.8.4"
